[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raveforge"
version = "0.1.0"
description = "An elegant Python builder for Medidata Rave ODM XML."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Mohamed Nouira" }
]
license = { text = "MIT" }
keywords = [
  "medidata",
  "rave",
  "odm",
  "cdisc",
  "clinical-trials",
  "rws",
  "xml"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = [
  "requests>=2.28"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[project.urls]
Homepage = "https://github.com/mnouira02/raveforge"
Repository = "https://github.com/mnouira02/raveforge"
Issues = "https://github.com/mnouira02/raveforge/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]