[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raveforge"
version = "0.4.0"
description = "An elegant Python builder for Medidata Rave ODM XML."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Mohamed Nouira" }
]
license = "MIT"
keywords = [
  "medidata",
  "rave",
  "odm",
  "cdisc",
  "clinical-trials",
  "rws",
  "xml"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = [
  "requests>=2.28"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4"
]

[project.urls]
Repository = "https://github.com/mnouira02/raveforge"
Issues = "https://github.com/mnouira02/raveforge/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["raveforge"]
